--- a/templates/main.html
+++ b/templates/main.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>H8 Model Deployment</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    <form action="{{ url_for('predict') }}" method="post">
-        <input type="text" name="ssc" placeholder="Secondary Education" required="required" />
-        <input type="text" name="hsc" placeholder="Highschool" required="required" />
-        <input type="text" name="degree" placeholder="Degree" required="required" />
-        <input type="text" name="etest" placeholder="Interview Score" required="required" />
+    <link rel="stylesheet" href="../static/css/style.css" />
+    <!-- {{ url_for('static', filename='css/style.css') }} -->
+  </head>
+  <body>
+    <form action="/predict" method="post">
+      <input
+        type="text"
+        name="ssc"
+        placeholder="Secondary Education"
+        required="required"
+      />
+      <input
+        type="text"
+        name="hsc"
+        placeholder="Highschool"
+        required="required"
+      />
+      <input
+        type="text"
+        name="degree"
+        placeholder="Degree"
+        required="required"
+      />
+      <input
+        type="text"
+        name="etest"
+        placeholder="Interview Score"
+        required="required"
+      />
 
-        <button type="submit">Predict</button>
+      <button type="submit">Predict</button>
 
-        <p>{{ prediction_text }}</p>
+      <p>{{ prediction_text }}</p>
     </form>
-
-</body>
+  </body>
 </html>
